# israel-welfare-inspection-dataset-builder

./: .agent-plan.md  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/: pr-agent-context-template.md
.github/workflows/: ci.yml  pr-agent-context-refresh.yml  weekly-artifacts.yml
docs/: architecture.md  data_quality.md  extraction_methodology.md  implementation_plan.md  operations.md  privacy_and_publication_policy.md  roadmap.md  schema.md  source_site_notes.md
schemas/: backfill_diagnostics.schema.json  datapackage.schema.json  extraction_candidate.schema.json  facility.schema.json  finding_candidate.schema.json  finding_extraction_diagnostics.schema.json  inspection.schema.json  llm_evaluation_report.schema.json  llm_extraction_candidate.schema.json  reconciled_report_metadata.schema.json  reconciliation_decision.schema.json  reconciliation_diagnostics.schema.json  rendered_page_artifact.schema.json  report.schema.json
src/welfare_inspections/: __init__.py  cli.py  text_normalization.py
src/welfare_inspections/collect/: __init__.py  export.py  findings.py  govil_client.py  llm_extract.py  local_outputs.py  manifest.py  metadata_parser.py  models.py  pdf_download.py  pdf_render.py  pdf_text.py  portal_discovery.py  portal_parser.py  publish.py  reconcile.py  report_index.py  settings.py  weekly.py
tests/: test_docs_exist.py  test_export.py  test_findings.py  test_imports.py  test_llm_extract.py  test_metadata_parser.py  test_pdf_download.py  test_pdf_render.py  test_pdf_text_extraction.py  test_publish.py  test_reconcile.py  test_report_index.py  test_source_discovery.py  test_weekly.py
