[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "israel-welfare-inspection-dataset-builder"
version = "0.1.0"
description = "Builder scaffold for the Israel welfare inspection open dataset pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Adanim Institute" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "lxml>=5.0",
  "pymupdf>=1.24",
  "pypdf>=5.0",
  "pydantic-settings>=2.0",
  "pydantic>=2.0",
  "rich>=13.0",
  "structlog>=24.0",
  "tenacity>=8.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=5.0",
  "pytest>=8.0",
  "ruff>=0.8.0"
]

[project.scripts]
welfare-inspections = "welfare_inspections.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/welfare_inspections"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
